src/objects/VPM_WithholdingTaxCode__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>VPM- Used for storing Tax Code option</description>
    <fields>
        <fullName>VPM_Country__c</fullName>
        <label>VPM_Country</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_PickListValue__c</fullName>
        <label>VPM_PickListValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_TaxType__c</fullName>
        <label>VPM_TaxType</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>VPM_WithholdingTaxCode</label>
</CustomObject>